name:                krile
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/callummance/krile#readme
license:             BSD3
license-file:        LICENSE
author:              Callum Mance
maintainer:          callummance@gmail.com
copyright:           (c) 2017-2017 Callum Mance
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Krile
  other-modules:       Data.Krile.FFData
                       Data.Krile.Store
  build-depends:       base >= 4.7 && < 5
                     , libsharlayan >= 0.1.0.2
                     , configurator >= 0.3.0.0
                     , text >= 1.2.1
                     , time
                     , monad-logger
                     , monad-control
                     , resourcet
                     , transformers
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , discord-hs
  default-language:    Haskell2010

executable krile-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , krile
  default-language:    Haskell2010

test-suite krile-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , krile
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/callummance/krile
